
        * Modify eina_prefix to deal with debian's fun new
        multiarch... if you are a shared library.

2012-08-01 Gustavo Sverzut Barbieri (k-s)

	* added eina_log_console_color_set() for cross platform console
	color set.

2012-08-14  Lucas De Marchi

        * Add EINA_SENTINEL macro to protect variadic functions

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-09-12 Patryk Kaczmarek <patryk.k@samsung.com>

        * Add EINA_SAFETY checks for proper function arguments.
        * Add check if given arguments (distance and coordinates) in eina_tiler
        and eina_rectangle are not below zero
        * Documentation for eina list specified and eina stringshare fixed

2012-09-27  Carsten Haitzler (The Rasterman)

        * Fix return value of eina_mmap_safety_enabled_set() and
        ensure future eina_mmap_safety_enabled_get() return right value
        on success.

2012-10-19  Patryk Kaczmarek

	* eina_stringshare_add_length return NULL when func args are wrong.

2012-10-20  Cedric Bail

	1.7.1 release

2012-11-23 Luis Felipe Strano Moraes

        1.7.2 release

2012-11-29  Vincent Torri

        * Do not use -pthread anymore, but instead pass _REENTRANT to the
	preprocessor and -lpthread to the linker.
	* On Solaris OS, -mt is passed by default and same flags than
	linux must be passed.

2012-12-07  Cedric Bail

	* Don't leak fd after exec.

2012-12-07  Luis Felipe Strano Moraes

	* 1.7.3 release

2012-12-12  Nicolas Aguirre

	* Fix define EINA_UNUSED for win32 builds

2012-12-13  Lucas De Marchi

    * Fix EINA_INLIST_FOREACH_SAFE macro

2012-12-17 Vincent Torri

	* Add XML output to doc
	* Add installation rule for doc

2012-12-21  Luis Felipe Strano Moraes

	* 1.7.4 release

2013-01-04  Luis Felipe Strano Moraes

	* 1.7.5 release

2013-01-05  Joel Klinghed

        * configure dirfd check fix

2013-02-06  Cedric Bail

	* counter measure denial of service on eina_hash function.
	* fix map leak in Eina_File.